--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   sqflite_common_ffi: ^2.3.6
   open_filex: ^4.7.0
   logging: ^1.2.0
+  provider: ^6.1.5+1
+  responsive_builder: ^0.7.0
   
 dev_dependencies:
   flutter_test:
