--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   logging: ^1.2.0
   provider: ^6.1.5+1
   responsive_builder: ^0.7.0
+  flutter_screenutil: ^5.9.3
+  fl_chart: ^1.1.1
   
 dev_dependencies:
   flutter_test:
