--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,8 @@ dependencies:
     sdk: flutter
   sqflite: ^2.3.0
   path: ^1.8.3
-  pdf: ^3.10.4
-  printing: ^5.11.0
+  pdf: ^3.11.3
+  printing: ^5.14.2
   path_provider: ^2.1.1
   share_plus: ^7.2.1
   intl: ^0.18.1
@@ -27,6 +27,7 @@ dependencies:
   responsive_builder: ^0.7.0
   flutter_screenutil: ^5.9.3
   fl_chart: ^1.1.1
+  shared_preferences: ^2.5.3
   
 dev_dependencies:
   flutter_test:
